--- a/analyses_tools.ipynb
+++ b/analyses_tools.ipynb
@@ -142,14 +142,14 @@
     "        Handle Outliers\", The ASQC Basic References in Quality Control:\n",
     "        Statistical Techniques, Edward F. Mykytka, Ph.D., Editor. \n",
     "    \"\"\"\n",
-    "    if len(points.shape) == 1:\n",
-    "        points = points[:,None]\n",
-    "    median = np.median(points, axis=0)\n",
-    "    diff = np.sum((points - median)**2, axis=-1)\n",
-    "    diff = np.sqrt(diff)\n",
-    "    med_abs_deviation = np.median(diff)\n",
+    "    if len(points.shape) == 1: #判断points为一维数据\n",
+    "        points = points[:,None] #将points转化形式，各数据可以批量处理\n",
+    "    median = np.median(points, axis=0) #求points的中位数,纵向\n",
+    "    diff = np.sum((points - median)**2, axis=-1)# axis=-1 纵向,各值减去中间值的平方\n",
+    "    diff = np.sqrt(diff)#平方后平方根\n",
+    "    med_abs_deviation = np.median(diff) #求中间值\n",
     "\n",
-    "    modified_z_score = 0.6745 * diff / med_abs_deviation\n",
+    "    modified_z_score = 0.6745 * diff / med_abs_deviation #  \n",
     "\n",
     "    return modified_z_score > thresh"
    ]
@@ -168,13 +168,19 @@
    "outputs": [],
    "source": [
     "def histogram(df, span):\n",
-    "    fig = plt.figure(figsize=(1.5,1.5))\n",
-    "    plt.hist(df['rt'], bins=25)\n",
-    "    if span is not None:\n",
+    "    fig = plt.figure(figsize=(1.5,1.5))#plt.figure():创建图像;figuresize:图像大小 宽*高\n",
+    "    plt.hist(df['rt'], bins=25)#选取数据中的rt列的数据分成25份作为横轴，每份出现的次数作为纵轴\n",
+    "    if span is not None:#if span: \n",
     "        plt.axvspan(span[0], span[1], color='black', alpha=0.1)\n",
+    "        #绘制垂直于x轴的参考区域。以span[0]为起点，以span[1]为终点 ，color 背景色 ，alpha 透明度 \n",
     "    plt.title('{}%'.format(round((df.loc[~np.isnan(df['rt']),'rt']<span[0]).mean()*100,3)))\n",
-    "    sns.despine(offset=2, trim=True)\n",
-    "    plt.tight_layout()\n",
+    "    #图画标题 \n",
+    "    #'{}%'.format() 为{}传入值，round(x,3) x保留3位小数，\n",
+    "    # np.isnan(df['rt']）筛选出df['rt']中的空值（NAN），~np.isnan(df['rt']）筛选出df['rt']中的非空值（NAN）\n",
+    "    # df.loc[~np.isnan(df['rt']),'rt'] df中'rt'列中非空值的行+ ‘rt’列\n",
+    "    #df.loc[~np.isnan(df['rt']),'rt']<span[0]：判断df.loc[~np.isnan(df['rt']),'rt']各行是否小于span[0] 用布尔值赋值 false=0 true=1, .mean()求平均值\n",
+    "    sns.despine(offset=2, trim=True)#despine()：删除图像上部和右侧的坐标轴，offset=？:两轴偏离的距离，trim：为True时，将坐标轴限制在数据最大/最小值\n",
+    "    plt.tight_layout()#自动调整子图参数，使之填充整个图像区域\n",
     "    return fig"
    ]
   },
